k8s/apps/code-server2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server2
  labels:
    app: code-server2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server2
  template:
    metadata:
      labels:
        app: code-server2
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: code-server2
          image: ghcr.io/kmc-jp/code-server-images-golang:a77bb829c8b2071373f5c879d53aa7f68d0e3483-33 # {"$imagepolicy": "default:code-server2"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 19200
          resources: {}
          args:
            - "--git-clone https://github.com/walnuts1018/http-dump"
          volumeMounts:
            - name: config
              mountPath: /home/coder/.config
            - name: work
              mountPath: /home/coder/work
            - name: local
              mountPath: /home/coder/.local
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: code-server2-config
        - name: work
          persistentVolumeClaim:
            claimName: code-server2-work
        - name: local
          persistentVolumeClaim:
            claimName: code-server2-local
