k8s/apps/code-server2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server2
  labels:
    app: code-server2
spec:
  ports:
    - name: http
      port: 19200
      targetPort: 19200
  selector:
    app: code-server2
  type: ClusterIP
