k8s/apps/code-server2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server2
spec:
  ingressClassName: "nginx"
  rules:
    - host: "code-2.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server2
                port:
                  number: 19200
